--- a/src/TraceLogger.csproj
+++ b/src/TraceLogger.csproj
@@ -56,6 +56,10 @@
     <Compile Include="TraceLoggerPackage.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="..\LICENSE">
+      <Link>Resources\LICENSE</Link>
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
     <None Include="packages.config" />
     <None Include="source.extension.vsixmanifest">
       <SubType>Designer</SubType>
