Delegate writing to application idle

--- a/src/TraceLogger.csproj
+++ b/src/TraceLogger.csproj
@@ -169,6 +169,7 @@
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="source.extension.resx">
